DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/CCMI__Milestone_Task__c.object-meta.xml
<CustomObject>
    <description>Used for capturing the tasks that form part of the project in the Cloud Coach Fundamentals app (Formerly Cloud Coach Milestones)</description>
    <label>Project Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>