DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Assignments__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Assignments__c</fullName>
    <inlineHelpText>List of Users/Contacts/Queues assigned to this task.</inlineHelpText>
    <label>Assignments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>