DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Completed_Date__c</fullName>
    <inlineHelpText>Date that the Task is marked as completed.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>