DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Completion_Percent__c</fullName>
    <formula>IF(ISPICKVAL(CCMI__Status__c, &apos;Completed&apos;),
  1,
  IF(ISBLANK(CCMI__Total_Sub_Tasks__c) || CCMI__Total_Sub_Tasks__c == 0,
    0,
    CCMI__Total_Completed_Sub_Tasks__c / CCMI__Total_Sub_Tasks__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>