DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Completion_Status__c</fullName>
    <formula>IF(ISBLANK(CCMI__Completed_Date__c),
  /* If not completed date, then consider the task incomplete */
  &apos;Incomplete&apos;,
  CASE(MAX(CCMI__Completed_Date__c - CCMI__Start__c - CCMI__Calculated_Duration__c, -1),
    -1, &apos;Early&apos;,
    0, &apos;On Time&apos;,
    &apos;Late&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>