DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Duration__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Duration__c</fullName>
    <inlineHelpText>The number of days the Task is expected to take. (excluding weekends)</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>