DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>