DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__IsLate__c.field-meta.xml
<CustomField>
    <fullName>CCMI__IsLate__c</fullName>
    <formula>NOT(ISPICKVAL(CCMI__Status__c, &apos;Completed&apos;)) &amp;&amp; CCMI__End__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late</label>
    <type>Checkbox</type>
</CustomField>