DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Milestone_Phase__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Milestone_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Phase that the current Task is a part of.</inlineHelpText>
    <label>Phase</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CCMI__Milestone_Project__c</field>
            <operation>equals</operation>
            <valueField>CCMI__Milestone_Phase__c.CCMI__Milestone_Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCMI__Milestone_Phase__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>