DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Milestone_Project__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Milestone_Project__c</fullName>
    <description>Detail record to a Milestone Project record</description>
    <inlineHelpText>The milestone project that this task is related to</inlineHelpText>
    <label>Project</label>
    <referenceTo>CCMI__Milestone_Project__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Milestone_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>