DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Parent__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Task that the current Task is dependent on.</inlineHelpText>
    <label>Parent Task</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent tasks must be from the same project</errorMessage>
        <filterItems>
            <field>$Source.CCMI__Milestone_Project__c</field>
            <operation>equals</operation>
            <valueField>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCMI__Milestone_Task__c</referenceTo>
    <relationshipLabel>Milestone Tasks</relationshipLabel>
    <relationshipName>Child_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>