DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Parent_End__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Parent_End__c</fullName>
    <inlineHelpText>The calculated end date of this Task&apos;s parent.</inlineHelpText>
    <label>Parent End Date</label>
    <type>Date</type>
</CustomField>