DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Start__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Start__c</fullName>
    <formula>IF(CCMI__Completed_Date__c &lt;= CCMI__Desired_Start__c || CCMI__Completed_Date__c &lt;= CCMI__Parent_End__c,
  CCMI__Completed_Date__c,
  IF(ISBLANK(CCMI__Parent_End__c) || CCMI__Desired_Start__c &gt; CCMI__Parent_End__c,
    /* Use desired start if after parent end (or if there is no parent) */
    CCMI__Desired_Start__c,
    /* Otherwise, set to Parent End + 1, adjusted for weekends */
    CCMI__Parent_End__c + CASE(MOD(CCMI__Parent_End__c - DATE(1900, 1, 8), 7),
      4, 3,
      5, 2,
      1
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated start date of the Task, derived from the Desired Start Date and, if there is a parent Task, the parent Task&apos;s calculated end date.</inlineHelpText>
    <label>Start Date (Calculated)</label>
    <type>Date</type>
</CustomField>