DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Status__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Status__c</fullName>
    <inlineHelpText>The status of the Task. This field is manually set.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>