DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Status_Enum__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Status_Enum__c</fullName>
    <formula>CASE(CCMI__Status__c,
  &apos;Not Started&apos;, 0,
  &apos;In Progress&apos;, 1,
  &apos;Completed&apos;, 2,
  -1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Enum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>