DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Timeline_Health__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Timeline_Health__c</fullName>
    <formula>CASE(CCMI__Status_Enum__c,
  2, &apos;Green&apos;,
  -1, &apos;N/A&apos;,
  IF(CCMI__End__c &lt; TODAY(),
    &apos;Red&apos;,
    IF(CCMI__Status_Enum__c == 0 &amp;&amp; CCMI__Start__c &lt; TODAY(), &apos;Yellow&apos;, &apos;Green&apos;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The health of the Task as determined by the Status, Start Date, and End Date of the Task. See the &apos;Timeline Health Reason&apos; for more information.</inlineHelpText>
    <label>Timeline Health</label>
    <type>Text</type>
</CustomField>