DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Total_Completed_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Total_Completed_Sub_Tasks__c</fullName>
    <label>Total Completed Sub Tasks</label>
    <summaryFilterItems>
        <field>CCMI__Milestone_Sub_Task__c.CCMI__IsComplete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CCMI__Milestone_Sub_Task__c.CCMI__Milestone_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>