DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Total_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Total_Sub_Tasks__c</fullName>
    <label>Total Sub Tasks</label>
    <summaryForeignKey>CCMI__Milestone_Sub_Task__c.CCMI__Milestone_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>