DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/fields/CCMI__Type__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Type__c</fullName>
    <inlineHelpText>The type of the Task</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legals</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>