DigicielFull/force-app/main/default/objects/CCMI__Milestone_Task__c/validationRules/CCMI__Cannot_Start_on_Weekend.validationRule-meta.xml
<ValidationRule>
    <fullName>CCMI__Cannot_Start_on_Weekend</fullName>
    <active>true</active>
    <errorConditionFormula>MOD(CCMI__Desired_Start__c - DATE(1900, 1, 8), 7) &gt; 4</errorConditionFormula>
    <errorDisplayField>CCMI__Desired_Start__c</errorDisplayField>
    <errorMessage>Tasks must start on a weekday</errorMessage>
</ValidationRule>